# fantastic-funicular

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: quality.yml
client/: .eslintrc.json  package.json
client/src/: App.tsx  ProcessForm.tsx  theme.ts
client/src/components/: index.ts
client/src/header/: Header.tsx  styled.ts
client/src/process_form/: ProcessForm.tsx  csp_record.ts  index.ts  styled.ts  toast.tsx  upload_file_requiest.tsx
client/src/table/: Table.tsx  styled.ts
dockerbuild/: Dockerfile
server/: example.env  noxfile.py  pyproject.toml
server/src/: app.py
server/src/reader/: csv.py
server/src/redis_client/: redis_client.py
server/src/trancaction_reference/: __init__.py  transaction_reference_schema.py  validator.py
